--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,15 +5,27 @@ body {
   background-image: linear-gradient(60deg, #FFF0F5, #FFE4E1);
   height: 100%;
 }
+#wrapper{
+  min-height: 100%;
+	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+	height: 100%;
+  margin-bottom: -100px;
+  position: relative;
+}
 .container{
   max-width: 1024px;
   margin: 0px auto;
+  padding-bottom: 100px;
 }
 footer{
   width: 100%;
+  height: 100px;
   position: absolute;
   bottom: 0;
   left: 0;
+}
+footer > .container {
+  padding-bottom: 0px;
 }
 
 /** Colors **/
