--- a/app/styles/picture-upload.css
+++ b/app/styles/picture-upload.css
@@ -6,3 +6,16 @@ picture-upload .preview{
 picture-upload .preview img{
   width: 100%;
 }
+
+picture-upload .add-picture .drop-box{
+  margin-top: 15px;
+  padding-top: 15px;
+  border: 5px dashed #a55;
+  text-align: center;
+}
+picture-upload .add-picture .drop-box.dragover{
+  border: 5px dashed blue;
+}
+picture-upload .add-picture p{
+  margin-top: 0px;
+}
