--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,5 @@
 /** Architecture **/
-body {
+html, body {
   margin: 0px;
   padding: 0px;
   background-image: linear-gradient(60deg, #FFF0F5, #FFE4E1);
@@ -7,8 +7,6 @@ body {
 }
 #wrapper{
   min-height: 100%;
-	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
-	height: 100%;
   margin-bottom: -100px;
   position: relative;
 }
