--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 /** Architecture **/
 html, body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   background-image: linear-gradient(60deg, #FFF0F5, #FFE4E1);
   height: 100%;
 }
@@ -12,7 +12,7 @@ html, body {
 }
 .container{
   max-width: 1024px;
-  margin: 0px auto;
+  margin: 0 auto;
   padding-bottom: 100px;
 }
 footer{
@@ -23,7 +23,7 @@ footer{
   left: 0;
 }
 footer > .container {
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 /** Colors **/
@@ -64,11 +64,11 @@ footer > .container {
   box-sizing: border-box;
 }
 .input[type="number"]{
-  width: 50px;
+  width: 70px;
 }
 .input-error{
   border-color: red !important;
-  box-shadow: 0px 0px 5px red !important;
+  box-shadow: 0 0 5px red !important;
 }
 .error-details{
   color: #a94442;
@@ -81,4 +81,26 @@ footer > .container {
 }
 .fa.fa-star-o{
   color: rgba(0,0,0,0.5);
+}
+
+/** Lists **/
+.list-title{
+  margin-bottom: 5px;
+}
+.list{
+  list-style-type: none;
+  width: 80%;
+  margin-top: 5px;
+  padding-left: 0;
+}
+.list li{
+  border: 1px solid #ffcccc;
+  background: rgba(255, 200, 200, 0.3);
+  padding: 5px 10px;
+  font-size: 1.5em;
+}
+.list li a{
+  font-style: italic;
+  cursor: pointer;
+  color: #483d8b;
 }
