--- a/app/layout/main.css
+++ b/app/layout/main.css
@@ -104,3 +104,13 @@ footer > .container {
   cursor: pointer;
   color: #483d8b;
 }
+
+/** No select **/
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
