refactoring recipes functions + profile

--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <div class="logo">
-      <a ui-sref="searchRecipe">
+      <a ui-sref="recipeSearch">
         <h1 class="title">COOKEASY</h1>
       </a>
     </div>
