--- a/app/styles/picture-upload.css
+++ b/app/styles/picture-upload.css
@@ -1,10 +1,11 @@
 picture-upload .preview{
   width: 100%;
-  margin: -15px;
+  margin-top: -15px;
 }
 
 picture-upload .preview img{
   width: 100%;
+  display: block;
 }
 
 picture-upload .add-picture .drop-box{
