--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -7,7 +7,7 @@
     </div>
     <ul>
       <li class="menu-item">
-        <a class="menu-item-btn">
+        <a class="menu-item-btn active">
           <span>Recipes</span>
         </a>
       </li>
