--- a/app/layout/menu-left.html
+++ b/app/layout/menu-left.html
@@ -2,12 +2,12 @@
   <div class="menu-left-content">
     <h3>Menu</h3>
     <a href ng-click="menuLeft.toggleDisplay()" ui-sref="recipeSearch">Search recipes</a>
-    <a href ng-click="menuLeft.goToProfile()">Create a recipe</a>
+    <a href ng-click="menuLeft.goToCreateRecipe()">Create a recipe</a>
     <a href="#">Game learning</a>
-    <a href="#">Create a game</a>
+    <a href ng-click="menuLeft.goToCreateGame()">Create a game</a>
     <a href ng-click="menuLeft.goToProfile()">Profile</a>
     <a href="#">Favorites</a>
   </div><div class="menu-left-toggle pointer-on" ng-click="menuLeft.toggleDisplay()">
-    <i class="fa fa-bars fa-2x"></i>
+    <i class="fa fa-chevron-right fa-2x t-normal" ng-class="{'r-180': menuLeft.opened}"></i>
   </div>
 </nav>
