search game init

--- a/app/layout/menu-left.html
+++ b/app/layout/menu-left.html
@@ -3,7 +3,7 @@
     <h3>Menu</h3>
     <a href ng-click="menuLeft.toggleDisplay()" ui-sref="recipeSearch">Search recipes</a>
     <a href ng-click="menuLeft.goToCreateRecipe()">Create a recipe</a>
-    <a href="#">Game learning</a>
+    <a href ng-click="menuLeft.goToSearchGame()">Game learning</a>
     <a href ng-click="menuLeft.goToCreateGame()">Create a game</a>
     <a href ng-click="menuLeft.goToProfile()">Profile</a>
     <a href="#">Favorites</a>
