--- a/app/widgets/step-line.css
+++ b/app/widgets/step-line.css
@@ -1,17 +1,18 @@
 step-line{
   text-align: center;
   margin: 0px auto;
+  display: block;
 }
 
-step-line circle {
+step-line circle{
   fill: #FFC07F;
   stroke: #999;
 }
-step-line circle.current {
+step-line circle.current{
   stroke: black;
   fill: #ddd;
 }
-step-line circle:not(.current):hover {
+step-line circle:not(.current):hover{
   stroke: #FFC07F;
   stroke-width: 7px;
   pointer: cursor;
