--- a/app/game-display/display-quiz.css
+++ b/app/game-display/display-quiz.css
@@ -39,10 +39,13 @@
   font-size: 0.7em;
 }
 .display-quiz .quiz > h1 .fa-circle{
-  color: #800;
+  color: #800000;
 }
 .display-quiz .quiz > h1 .fa-heart{
   color: #fff;
+}
+.display-quiz .quiz-finished .fa-heart {
+  color: #800000;
 }
 
 /** Quiz finished **/
