--- a/app/game-search/search-game.css
+++ b/app/game-search/search-game.css
@@ -3,15 +3,15 @@
   margin: 20px auto;
 }
 
+/** Game **/
 .game-search .game{
   width: 45%;
   display: inline-block;
-  background-color: #fff;
   margin: 5px;
   padding: 5px;
-  border-radius: 5px;
+  box-shadow: 0 0 1px #333;
+  background-color: #fff;
 }
-
 .game-search .info,
 .game-search .logo
 {
@@ -19,6 +19,7 @@
   vertical-align: top;
 }
 
+/** Logo **/
 .game-search .logo img{
   height: 80px;
   width: 80px;
@@ -26,11 +27,17 @@
   border: 1px solid #ccc;
 }
 
+/** Info **/
 .game-search .info{
   padding: 5px;
 }
-
 .game-search .info h3,
 .game-search .info p{
   margin: 5px 0;
+}
+.game-search .info h3{
+  border-bottom: 1px solid #ccc;
+}
+.game-search .info .nb-like .fa-heart{
+  color: #800;
 }
